--- a/index.html
+++ b/index.html
@@ -147,44 +147,44 @@
 
           <div class="square white">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square black">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square white">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square black">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square white">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square black">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square white">
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <div class="square black">
             <div class="coordinate rank whiteText">2</div>
 
             <div class="piece pawn" color="white">
-              <img src="white-pawn.png" alt="pawn" />
+              <img src="white-Pawn.png" alt="pawn" />
             </div>
           </div>
           <!-- ------------------------------------------------------------------------- -->
