--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chess Board</title>
+    <title>Chess Game</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
